--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ if(savedDarkMode === true){
           <div class="breadcrumbs"></div>
           <div class="cover ">
             <h1 class="cover"><span><span>bdk-jvm</span></span></h1>
-            <div class="platform-hinted UnderCoverText" data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":jvm:dokkaHtml/main"><p class="paragraph">The bitcoindevkit language bindings library for the JVM.</p></div></div>
+            <div class="platform-hinted UnderCoverText" data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":jvm:dokkaHtml/main"><p class="paragraph">The <a href="https://bitcoindevkit.org/">bitcoindevkit</a> language bindings library for the JVM. Current version: <code class="lang-kotlin">0.4.0</code>.</p></div></div>
           </div>
           <h2 class="">Packages</h2>
           <div class="table"><a data-name="-1297354665%2FPackages%2F-529471818" anchor-label="org.bitcoindevkit" id="-1297354665%2FPackages%2F-529471818" data-filterable-set=":jvm:dokkaHtml/main"></a>
